--- a/css/style.css
+++ b/css/style.css
@@ -689,6 +689,23 @@ footer .wrapper:after {
     }
 }
 
+/* FIND JOB PAGE */
+
+#findjobs #search-form input[type=submit] {
+    margin-bottom: 0;
+}
+
+#findjobs #type-filter ul li {
+    width: 100%;
+    border-bottom: 1px solid #CCC;
+    block-size: border-box;
+}
+
+#findjobs #type-filter ul li:last-child {
+    border-bottom: none;
+    border-right: none;
+}
+
 @media screen and (max-width: 768px) {
 
     .company-box {
