--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ nav::after {
     margin: 0 10px;
 }
 
-#search-form input[type=submit] {
+#search-form input[type=submit], #sendjobs input[type=submit] {
     background-color: #3381F3;
     text-transform: uppercase;
     color: #FFF;
@@ -126,7 +126,7 @@ nav::after {
     transition: 0.5s;
 }
 
-#search-form input[type=submit]:hover {
+#search-form input[type=submit]:hover, #sendjobs input[type=submit]:hover {
     background-color: #2B79EB;
     transition: 0.3s;
 }
@@ -706,6 +706,69 @@ footer .wrapper:after {
     border-right: none;
 }
 
+/* SEND JOBS PAGE*/
+#sendjobs #sendjobs-container {
+    margin-top: 100px;
+    background: none;
+    padding: 5em 0;
+}
+
+#sendjobs h1 {
+    font-size: 36px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.input-box {
+    margin-bottom: 2em;
+    width: 50%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#sendjobs label {
+    text-transform: uppercase;
+    color: #666;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 1em;
+}
+
+#sendjobs input, #sendjobs textarea, #sendjobs select {
+    padding: 10px 20px;
+    font-size: 18px;
+}
+
+#sendjobs input {
+    border-radius: 5px;
+    border: 1px solid #CCC;
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#sendjobs textarea, #sendjobs select {
+    border-radius: 5px;
+    border: 1px solid #CCC;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#sendjobs input[type=submit] {
+    width: 200px;
+    float: right;
+}
+
+.input-box::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+/* RESPONSIVE */
 @media screen and (max-width: 768px) {
 
     .company-box {
